# DEVASTMOD-SOFTWARE

./: .gitignore  embed_manifest.bat  package-lock.json  package.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  utils.rs
src/css/: sb-admin-2.min.css  styles.css
src/js/: engine.js  example_segments.json  main.js
