[package]
name = "devastmod"
version = "0.0.1"
description = "devastmod"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
zip = "0.5"
sha2 = "0.9.3"
crypto = "0.5.1"
aes = "0.7.4"
block-modes = "0.8.1"
base64 = "0.13.0"
winapi = { version = "0.3", features = ["synchapi", "errhandlingapi"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
